# django-admin-edit-lock

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.cfg
admin_edit_lock/: admin.py
admin_edit_lock/static/admin_edit_lock/: update_lock.js
tests/: admin.py  models.py  settings.py  test_django_admin_edit_lock.py
