[tool.poetry]
name = "django-admin-edit-lock"
version = "0.3.1"
description = "django-admin-edit-lock is a Django application used in admin to prevent simultaneous edit by more than one users."
authors = ["Demetris Stavrou"]
packages = [
    { include = "admin_edit_lock" },
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/demestav/django-admin-edit-lock"

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b2"
flake8 = "^3.9.2"
isort = "^5.8.0"
pytest-django = "^4.4.0"
pytest-pythonpath = "^0.7.3"
freezegun = "^1.1.0"
pre-commit = "^2.13.0"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["admin_edit_lock"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true